--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-device-mockups": "^0.1.11",
     "react-dom": "^17.0.2",
+    "react-notion": "^0.10.0",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.0"
   },
